--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@
     --vip: #E6B325;
 }
 
+h1,h2,h3,h4,h5,h6,p{
+    padding: 0px;
+    margin: 0px;
+    color: var(--darker);
+}
+
 body{
     padding: 0;
     margin: 0;
@@ -56,11 +62,47 @@ hr{
     padding: 20px;
 }
 
+.row{
+    display: flex;
+    flex-direction: row;
+}
+
+.align-center{
+    align-items: center;
+}
+
+.col{
+    display: flex;
+    flex-direction: column;
+}
+
+.space-between{
+    justify-content: space-between;
+}
+
+.gap10{
+    gap: 10px;
+}
+
+.gap20{
+    gap: 20px;
+}
+
+.gap50{
+    gap: 50px;
+}
+
+.mxc{
+    width: max-content;
+}
+
+
+
 .card{
     border-radius: 10px;
-    padding: 10px 30px;
+    padding: 10px;
     border: var(--shaded) 0.5px solid;
-    background-color: var(--lighter)
+    background-color: var(--lighter);
 }
 
 .nav-bar .active{
@@ -352,6 +394,32 @@ hr{
     width: 20px;
     height: 20px;
     object-fit: contain;
+}
+
+.event-top-img{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
+.buy-btn{
+    display: flex;
+    justify-content: stretch;
+    padding: 10px 20px;
+    font-size: medium;
+    font-weight: bold;
+    border-radius: 20px;
+    border: none;
+    color: var(--lighter);
+    
+}
+
+.vip-btn{
+    background-color: var(--vip);
+}
+
+.general-btn{
+    background-color: var(--generalAdmission);
 }
 
 
