--- a/style.css
+++ b/style.css
@@ -377,6 +377,28 @@ hr{
     width:min-content;
 }
 
+.overflow-auto{
+    overflow: auto;
+}
+
+.overflow-hidden{
+    overflow: hidden;
+}
+
+.overflow-visible{
+    overflow: visible;
+}
+
+.overflow-scroll{
+    overflow: scroll;
+}
+
+.background-img1{
+    background-image: url("./images/background1.jpg");
+    image-rendering: -webkit-optimize-contrast;
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
+}
+
 .primary{
     color: var(--primary);
 }
