--- a/style.css
+++ b/style.css
@@ -361,6 +361,22 @@ hr{
     width: 25%;
 }
 
+.width100px{
+    width: 100px;
+}
+
+.width200px{
+    width: 200px;
+}
+
+.width300px{
+    width: 300px;
+}
+
+.width400px{
+    width: 400px;
+}
+
 .height100{
     height: 100%;
 }
@@ -437,6 +453,13 @@ hr{
 
 .background-img2{
     background-image: url("https://images.unsplash.com/photo-1501281668745-f7f57925c3b4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80");
+    background-size: cover;
+    background-position:50% 50%;
+    box-shadow: inset 0 0 0 1000px rgba(0,0,5,.7);
+}
+
+.background-img3{
+    background-image: url("./images/background2.jpg");
     background-size: cover;
     background-position:50% 50%;
     box-shadow: inset 0 0 0 1000px rgba(0,0,5,.7);
