--- a/style.css
+++ b/style.css
@@ -518,6 +518,14 @@ hr{
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);
 }
 
+.background-img7{
+    background-image: url("./images/background5.jpg");
+    background-size: cover;
+    background-position:50% 50%;
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);
+}
+
+
 .primary{
     color: var(--primary);
 }
